# pellarudo

./: .gitignore  CMakeLists.txt  pellarudo.zargo
pellarudo/: CMakeLists.txt  bet.cpp  bet.h  dice.cpp  dice.h  game.cpp  game.h  main.cpp  pellarudo.cpp  pellarudo.h  pellarudo.pro  pellarudo.ui  player.cpp  player.h
pellarudo/include/: Dice.hpp
pellarudo/src/: Dice.cpp
pellarudo/tests/: CMakeLists.txt  dice_test.cpp
